error.txt
An error occurred: invalid syntax (<string>, line 1)
Traceback:
Traceback (most recent call last):
  File "C:\Users\polar\Desktop\MUSE\main.py", line 135, in converse
    "message": "{eval(script)}"
  File "<string>", line 1
    import os; os.path.join('C:\Users\polar\Desktop\MUSE', 'day_of_week_command.py')
    ^
SyntaxError: invalid syntax

An error occurred: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape (<string>, line 1)
Traceback:
Traceback (most recent call last):
  File "C:\Users\polar\Desktop\MUSE\main.py", line 135, in converse
    "message": r"{eval(script)}"
  File "<string>", line 1
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape

An error occurred: 'script'
Traceback:
Traceback (most recent call last):
  File "C:\Users\polar\Desktop\MUSE\main.py", line 129, in converse
    script = response_obj["script"]
KeyError: 'script'

